Fixed squashed up results boxes in Safari

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -190,7 +190,6 @@ body:not([data-storeId]) .searchResultBox .reserve {
   margin: auto;
 }
 .searchResultBox .description {
-    display:inline-block;
     font-size: 11px;
     height: 18px;
     padding-top: 10px;
